<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DataDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="240dp"
                android:layout_height="360dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/detail_poster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="@android:color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(2000)"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_detail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="2 jam 25 m"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/rilis"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Genre"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_detail_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(Rilis)"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/genre"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Genre"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/tim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_detail_teams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sutradara: Jalil"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pemeran"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_detail_actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pemeran: Muchamad, Maroqi, Abdul, Jalil"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_pengguna"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating"
                android:textColor="@android:color/black"
                android:textSize="36sp" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/star"
                android:contentDescription="@string/rating"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilasan_singkat"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>